src/dotnet/UI.Blazor/Components/Modal/modal.css
/* Inherited from Blazored Modal */

.modal-overlay {
    @apply z-modal-overlay fixed;
    @apply flex-1 flex-y justify-center;
    @apply top-0 left-0 h-full w-full;
    @apply overflow-x-hidden overflow-y-hidden;
    @apply outline-0;
    background-color: rgba(0,0,0,0.8);
}

.modal-focus-trap {
    @apply h-full w-full md:h-auto md:w-auto;
}

.modal {
    @apply flex-y;
    @apply h-full w-full md:h-auto md:w-auto;
    @apply border-0 rounded-none;
    @apply p-0 m-0 bg-transparent;
    /* @apply bg-white; */
    box-shadow: none;
}

.modal .modal-content {
    /* h-[90vh] adds top+bottom gap between the modal frame & screen edge on smaller screens */
    /* Note that modal-overlay-fullscreen selector below cancels it */
    @apply h-[90vh] w-full;
}

/* Full-screen mode overrides */
.modal-overlay-fullscreen .modal-focus-trap,
.modal-overlay-fullscreen .modal .modal-content {
    @apply h-full w-full;
}

.modal-chrome-wrapper {
    @apply h-full w-full;
    @apply flex flex-col justify-center items-center;
}

.modal-chrome-overlay {
    @apply block fixed left-0 top-0 h-full w-full;
}

.modal-chrome {
    @apply rounded-lg md:shadow-2xl;
    @apply bg-01 text-03;
    @apply overflow-hidden;
    @apply z-10;
}
.modal-frame {
    @apply flex-y items-stretch gap-y-4 overflow-hidden;
    @apply p-0 md:p-4 pb-4;
    @apply h-full w-full md:h-auto md:w-modal;
    @apply md:rounded-2xl rounded-none;
    @apply font-medium;
}
.modal-frame .dialog-body,
.modal-frame .dialog-buttons {
    @apply px-4 md:px-1 overflow-hidden;
}
.modal-frame .dialog-buttons {
    @apply flex-none;
}
.dialog-body .validation-errors {
    @apply rounded-md mb-2;
}
.dialog-body .validation-errors .validation-message {
     @apply flex justify-center rounded-md p-2 bg-error text-04 font-normal text-base;
 }

.modal-frame * {
    @apply cursor-default;
}
.modal-frame .btn,
.modal-frame .btn * {
    @apply cursor-pointer;
}
.modal-frame input[type=text] {
    @apply cursor-text;
}
.btn.btn-square.modal-close {
    @apply h-fit -mr-1.5;
}
.btn.btn-square.modal-close:hover > .btn-content {
    @apply bg-transparent opacity-90;
}

.modal-header {
    @apply flex-none flex-x justify-between items-center gap-x-2;
    @apply min-h-10 max-h-10;
    @apply overflow-visible;
}
.modal-header .modal-title {
    @apply flex-1;
    @apply text-xl md:text-lg font-semibold md:font-medium truncate;
}
.modal-header .modal-close {
    @apply flex-none;
    @apply -mr-0.5;
    @apply overflow-visible;
    @apply invisible md:visible;
}

.modal-mobile-header {
    @apply flex-x justify-start items-center gap-x-2;
    @apply min-h-14 px-2;
    @apply border-b border-bg-04;
    @apply bg-02;
}
.modal-close,
.modal-close * {
    @apply cursor-pointer;
}

.dialog-body {
    @apply flex-1 flex-y items-stretch overflow-hidden;
    /*@apply overflow-y-auto custom-scrollbar;*/
}
.dialog-body input:not([type='checkbox']):not(.dialog-unstyled) {
    @apply border rounded-md outline-none p-1 px-2;
}
.dialog-body input:not([type='checkbox']):not(.dialog-unstyled).invalid {
    @apply border-error;
}
.dialog-body input:focus:not(.dialog-unstyled) {
    @apply outline-none border-primary;
    @apply ring-1 ring-primary;
}
.dialog-body input:not([type='checkbox']):not(.dialog-unstyled).invalid:focus {
    @apply border-error;
}

.dialog-buttons {
    @apply flex-x justify-end;
    @apply overflow-hidden;
}
.dialog-buttons .btn,
.dialog-buttons .btn * {
    @apply cursor-pointer;
}
.dialog-buttons.full-width {
    @apply min-w-full;
}
.dialog-buttons.full-width .form-buttons {
    @apply gap-x-4 justify-center;
}
.dialog-buttons.full-width .btn {
    @apply max-w-full grow;
}

div.modal-content > form {
    @apply h-full;
}

/* Fullscreen Modal */
.modal-overlay-fullscreen .modal {
    @apply md:w-full md:h-full;
}
.modal-overlay-fullscreen .modal-frame.modal-chrome {
    @apply w-full h-full p-0 gap-y-0 rounded-none;
}
.modal-overlay-fullscreen .dialog-body {
    @apply p-0;
}
.modal-overlay-fullscreen .btn-x {
    @apply absolute right-4 top-4;
    @apply hidden md:flex-x;
}
.modal-overlay-fullscreen .modal-header {
    @apply hidden;
}
.modal-overlay-fullscreen input {
    @apply cursor-text;
}
.modal-overlay-fullscreen .user-avatar-editor-item,
.modal-overlay-fullscreen .user-avatar-editor-item *,
.modal-overlay-fullscreen button,
.modal-overlay-fullscreen button * {
    @apply cursor-pointer;
}

